[gd_scene load_steps=7 format=3 uid="uid://bib063ijjum55"]

[ext_resource type="Script" path="res://UI/inventory_display.gd" id="1_ucp2m"]
[ext_resource type="Texture2D" uid="uid://du7r0sqrqpjg7" path="res://assets/20250420manaSoul9SlicesC-Sheet.png" id="2_jboqh"]
[ext_resource type="Texture2D" uid="uid://bgug6sycfwk4g" path="res://assets/20250420manaSoul9SlicesB-Sheet.png" id="3_f8nq7"]
[ext_resource type="PackedScene" uid="uid://cdju363jtkpap" path="res://UI/slot.tscn" id="4_ecjys"]
[ext_resource type="PackedScene" uid="uid://bqorgw7ggqg72" path="res://UI/tooltip_panel.tscn" id="5_q3cwm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8pgn"]
bg_color = Color(0.803922, 0.52549, 0.321569, 0.803922)
corner_detail = 4

[node name="InventoryDisplay" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_ucp2m")
normal_slot_sprite = ExtResource("2_jboqh")
selected_slot_sprite = ExtResource("3_f8nq7")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 23.0
offset_right = -2.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q8pgn")

[node name="SlotContainer" type="HBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -122.0
offset_right = -1.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
alignment = 1

[node name="Slot1" parent="BackgroundPanel/SlotContainer" instance=ExtResource("4_ecjys")]
layout_mode = 2

[node name="Slot2" parent="BackgroundPanel/SlotContainer" instance=ExtResource("4_ecjys")]
layout_mode = 2

[node name="Slot3" parent="BackgroundPanel/SlotContainer" instance=ExtResource("4_ecjys")]
layout_mode = 2

[node name="Slot4" parent="BackgroundPanel/SlotContainer" instance=ExtResource("4_ecjys")]
layout_mode = 2

[node name="Slot5" parent="BackgroundPanel/SlotContainer" instance=ExtResource("4_ecjys")]
layout_mode = 2

[node name="Slot6" parent="BackgroundPanel/SlotContainer" instance=ExtResource("4_ecjys")]
layout_mode = 2

[node name="Slot7" parent="BackgroundPanel/SlotContainer" instance=ExtResource("4_ecjys")]
layout_mode = 2

[node name="Slot8" parent="BackgroundPanel/SlotContainer" instance=ExtResource("4_ecjys")]
layout_mode = 2

[node name="Slot9" parent="BackgroundPanel/SlotContainer" instance=ExtResource("4_ecjys")]
layout_mode = 2

[node name="Slot10" parent="BackgroundPanel/SlotContainer" instance=ExtResource("4_ecjys")]
layout_mode = 2

[node name="TooltipPanel" parent="." instance=ExtResource("5_q3cwm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 160.0
offset_bottom = 200.0
grow_horizontal = 1
grow_vertical = 1
